Analyze temporal dynamics

--- a/report/index.tex
+++ b/report/index.tex
@@ -208,7 +208,7 @@
 \maketitle
 
 
-\subsection{Abstract}\label{abstract}
+\section{Abstract}\label{abstract}
 
 This review examines the dynamics of event shocks across economic,
 epidemiological, and environmental domains. We synthesize evidence from
@@ -220,9 +220,9 @@ performance between logistic and count models. The review highlights
 critical data harmonization challenges and proposes a framework for
 cross-domain shock analysis.
 
-\subsection{1. Introduction}\label{introduction}
+\section{1. Introduction}\label{introduction}
 
-\subsubsection{Context \& Motivation}\label{context-motivation}
+\subsection{Context \& Motivation}\label{context-motivation}
 
 Event shocks - sudden deviations from system equilibria - drive critical
 transitions in socioeconomic and ecological systems. Recent crises
@@ -234,7 +234,7 @@ comparison.
 As shown by prior work on shock dynamics (Smith \& Doe, 2020), the
 event\ldots{}
 
-\subsubsection{Objectives}\label{objectives}
+\subsection{Objectives}\label{objectives}
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -248,10 +248,10 @@ event\ldots{}
   Propose standardized shock taxonomy
 \end{enumerate}
 
-\subsection{2. Data Sources and
+\section{2. Data Sources and
 Preprocessing}\label{data-sources-and-preprocessing}
 
-\subsubsection{2.1. Raw Data}\label{raw-data}
+\subsection{2.1. Raw Data}\label{raw-data}
 
 Our analysis uses the Global Shock Database containing 15,000+ events
 from 1990-2023. Key variables include:
@@ -267,10 +267,10 @@ from 1990-2023. Key variables include:
   Temporal resolution (daily/monthly)
 \end{itemize}
 
-\subsubsection{2.2. Cleaning \&
+\subsection{2.2. Cleaning \&
 Harmonization}\label{cleaning-harmonization}
 
-\subsection{Data Prep}\label{data-prep}
+\section{Data Prep}\label{data-prep}
 
 \begin{longtable}[]{@{}llllllll@{}}
 \toprule\noalign{}
@@ -291,7 +291,7 @@ CONFL:Terrorist attack & Asia \\
 CLIMA:Extreme temperature & Asia \\
 \end{longtable}
 
-\subsection{Show info}\label{show-info}
+\section{Show info}\label{show-info}
 
 \begin{longtable}[]{@{}lllll@{}}
 \toprule\noalign{}
@@ -309,11 +309,11 @@ Shock\_comb & object & 14930 & 0 & 0.0 \\
 Continent & object & 14930 & 0 & 0.0 \\
 \end{longtable}
 
-\subsubsection{Describe data}\label{describe-data}
+\subsection{Describe data}\label{describe-data}
 
-\subsubsection{Next step?}\label{next-step}
+\subsection{Next step?}\label{next-step}
 
-\subsubsection{Preprocessing steps
+\subsection{Preprocessing steps
 included:}\label{preprocessing-steps-included}
 
 \begin{enumerate}
@@ -328,29 +328,29 @@ included:}\label{preprocessing-steps-included}
   Exclusion of ambiguous events (\textless5 sources validation)
 \end{enumerate}
 
-\subsection{3. Exploratory Analysis}\label{exploratory-analysis}
+\section{3. Exploratory Analysis}\label{exploratory-analysis}
 
-\subsubsection{3.1. Global Trends}\label{global-trends}
+\subsection{3.1. Global Trends}\label{global-trends}
 
 Figure 1 shows normalized shock frequency by category, revealing
 increasing environmental shocks post-2010 and persistent economic
 volatility.
 
-\subsubsection{3.2. Regional Patterns}\label{regional-patterns}
+\subsection{3.2. Regional Patterns}\label{regional-patterns}
 
 Subsetting by continent shows North America experiences more frequent
 economic shocks, while Asia shows higher environmental shock prevalence
 (see Appendix A).
 
-\subsection{4. Modelling Approaches}\label{modelling-approaches}
+\section{4. Modelling Approaches}\label{modelling-approaches}
 
-\subsubsection{4.1. Binary Probit/Logit
+\subsection{4.1. Binary Probit/Logit
 Models}\label{binary-probitlogit-models}
 
 Logistic regression models shock occurrence using 1-year lagged
 predictors:
 
-\subsection{Modelling}\label{modelling}
+\section{Modelling}\label{modelling}
 
 \phantomsection\label{results}
 \begin{verbatim}
@@ -358,63 +358,132 @@ predictors:
 
 |      |   Value |
 |------|---------|
-| RMSE |   0.653 |
-| R2   |  -0.49  |
+| RMSE |    0.6  |
+| R2   |   -0.26 |
 
 
 ## Regression Coefficients
 
 | Variable                |   Coef. |   Std.Err. |   p-value |
 |-------------------------|---------|------------|-----------|
-| Intercept               |  -1.343 |      0.234 |     0     |
-| C(Continent)[T.America] |  -0.646 |      0.179 |     0     |
-| C(Continent)[T.Asia]    |  -0.686 |      0.15  |     0     |
-| C(Continent)[T.Europe]  |  -0.631 |      0.142 |     0     |
-| C(Continent)[T.Oceania] |  -1.235 |      0.271 |     0     |
-| ECONOMIC_lag5           |   0.233 |      0.075 |     0.002 |
-| Year_trend              |   0.027 |      0.011 |     0.01  |
-| TECHNOLOGICAL_lag2      |  -0.035 |      0.014 |     0.015 |
-| TECHNOLOGICAL_lag5      |   0.02  |      0.01  |     0.04  |
-| CLIMATIC_lag1           |   0.027 |      0.014 |     0.062 |
-| ECONOMIC_lag1           |   0.142 |      0.076 |     0.064 |
-| GEOPHYSICAL_lag5        |  -0.059 |      0.039 |     0.127 |
-| ECOLOGICAL              |   0.183 |      0.133 |     0.17  |
-| ECOLOGICAL_lag4         |   0.167 |      0.126 |     0.185 |
-| CONFLICTS_lag3          |   0.002 |      0.001 |     0.206 |
-| TECHNOLOGICAL_lag1      |   0.015 |      0.012 |     0.225 |
-| CLIMATIC_lag2           |   0.019 |      0.016 |     0.24  |
-| GEOPHYSICAL_lag3        |  -0.049 |      0.046 |     0.286 |
-| ECOLOGICAL_lag1         |   0.168 |      0.164 |     0.307 |
-| ECONOMIC_lag3           |  -0.092 |      0.09  |     0.308 |
-| CONFLICTS_lag1          |   0.001 |      0.001 |     0.308 |
-| ECONOMIC                |   0.076 |      0.078 |     0.327 |
-| CLIMATIC_lag4           |   0.016 |      0.017 |     0.338 |
-| CONFLICTS               |  -0.001 |      0.001 |     0.36  |
-| GEOPHYSICAL_lag1        |   0.05  |      0.056 |     0.369 |
-| TECHNOLOGICAL_lag3      |   0.01  |      0.012 |     0.374 |
-| GEOPHYSICAL             |   0.04  |      0.05  |     0.418 |
-| ECONOMIC_lag2           |  -0.065 |      0.1   |     0.515 |
-| CLIMATIC                |   0.013 |      0.02  |     0.518 |
-| CONFLICTS_lag4          |  -0.001 |      0.001 |     0.599 |
-| ECOLOGICAL_lag3         |   0.07  |      0.142 |     0.623 |
-| TECHNOLOGICAL_lag4      |   0.005 |      0.012 |     0.695 |
-| ECOLOGICAL_lag2         |  -0.057 |      0.169 |     0.737 |
-| CONFLICTS_lag2          |   0     |      0.001 |     0.752 |
-| ECONOMIC_lag4           |  -0.016 |      0.08  |     0.843 |
-| GEOPHYSICAL_lag2        |  -0.008 |      0.044 |     0.856 |
-| CLIMATIC_lag5           |  -0.002 |      0.015 |     0.895 |
-| CONFLICTS_lag5          |  -0     |      0.001 |     0.912 |
-| ECOLOGICAL_lag5         |   0.013 |      0.129 |     0.921 |
-| TECHNOLOGICAL           |  -0.001 |      0.014 |     0.929 |
-| GEOPHYSICAL_lag4        |  -0.003 |      0.042 |     0.946 |
-| CLIMATIC_lag3           |   0     |      0.012 |     0.991 |
+| Intercept               |  -0.923 |      0.129 |     0     |
+| C(Continent)[T.America] |  -0.679 |      0.18  |     0     |
+| C(Continent)[T.Asia]    |  -0.731 |      0.151 |     0     |
+| C(Continent)[T.Europe]  |  -0.674 |      0.141 |     0     |
+| C(Continent)[T.Oceania] |  -1.293 |      0.263 |     0     |
+| ECONOMIC_lag5           |   0.225 |      0.073 |     0.002 |
+| TECHNOLOGICAL_lag2      |  -0.034 |      0.014 |     0.015 |
+| TECHNOLOGICAL_lag5      |   0.021 |      0.009 |     0.023 |
+| CLIMATIC_lag1           |   0.027 |      0.015 |     0.06  |
+| GEOPHYSICAL_lag5        |  -0.064 |      0.039 |     0.097 |
+| ECONOMIC_lag1           |   0.12  |      0.074 |     0.107 |
+| ECOLOGICAL              |   0.204 |      0.135 |     0.13  |
+| ECOLOGICAL_lag4         |   0.184 |      0.127 |     0.148 |
+| TECHNOLOGICAL_lag1      |   0.015 |      0.012 |     0.227 |
+| CLIMATIC_lag2           |   0.019 |      0.016 |     0.246 |
+| ECONOMIC_lag3           |  -0.1   |      0.088 |     0.257 |
+| CONFLICTS_lag3          |   0.001 |      0.001 |     0.258 |
+| GEOPHYSICAL_lag3        |  -0.051 |      0.046 |     0.264 |
+| CONFLICTS_lag1          |   0.001 |      0.001 |     0.266 |
+| ECOLOGICAL_lag1         |   0.175 |      0.162 |     0.281 |
+| TECHNOLOGICAL_lag3      |   0.012 |      0.012 |     0.304 |
+| CLIMATIC_lag4           |   0.017 |      0.018 |     0.331 |
+| GEOPHYSICAL_lag1        |   0.052 |      0.056 |     0.346 |
+| GEOPHYSICAL             |   0.042 |      0.049 |     0.396 |
+| ECONOMIC_lag2           |  -0.081 |      0.098 |     0.41  |
+| ECONOMIC                |   0.06  |      0.076 |     0.432 |
+| ECOLOGICAL_lag3         |   0.094 |      0.143 |     0.512 |
+| CONFLICTS_lag4          |  -0.001 |      0.001 |     0.543 |
+| CLIMATIC                |   0.011 |      0.02  |     0.589 |
+| CONFLICTS               |  -0     |      0.001 |     0.603 |
+| CONFLICTS_lag5          |  -0     |      0.001 |     0.618 |
+| TECHNOLOGICAL_lag4      |   0.005 |      0.012 |     0.671 |
+| ECONOMIC_lag4           |  -0.03  |      0.077 |     0.694 |
+| ECOLOGICAL_lag5         |   0.045 |      0.125 |     0.718 |
+| TECHNOLOGICAL           |  -0.004 |      0.014 |     0.748 |
+| ECOLOGICAL_lag2         |  -0.046 |      0.168 |     0.785 |
+| CONFLICTS_lag2          |   0     |      0.001 |     0.798 |
+| CLIMATIC_lag3           |   0.002 |      0.012 |     0.889 |
+| CLIMATIC_lag5           |  -0.002 |      0.015 |     0.916 |
+| GEOPHYSICAL_lag2        |  -0.005 |      0.045 |     0.919 |
+| GEOPHYSICAL_lag4        |  -0.003 |      0.041 |     0.934 |
 \end{verbatim}
 
-\section{---------------------------}\label{section}
+\sisetup{table-number-alignment = center, group-digits = false}
 
-\section{Enhanced Performance Table}\label{enhanced-performance-table}
+\begin{tabular}{l
+                S[table-format=-1.3]
+                S[table-format=(1.3)]
+                S[table-format=<1.3]}
+  \toprule
+  & \multicolumn{3}{c}{Coefficient} \\ \cmidrule(lr){2-4}
+  Variable & {Estimate} & {(SE)} & {p-value} \\ \midrule
+  % Continental Fixed Effects
+  Intercept & -1.343*** & (0.234) & <0.001 \\
+  Asia      & -0.686*** & (0.150) & <0.001 \\
+  Oceania   & -1.235*** & (0.271) & <0.001 \\
+  Europe    & -0.631*** & (0.142) & <0.001 \\
+  America   & -0.646*** & (0.179) & <0.001 \\ \addlinespace
+  % Economic Factors
+  Economic (Lag 1) & 0.142   & (0.076) & 0.064 \\
+  Economic (Lag 5) & 0.233** & (0.075) & 0.002 \\ \addlinespace
+  % Technological Factors
+  Technological (Lag 2) & -0.035* & (0.014) & 0.015 \\
+  Technological (Lag 5) &  0.020* & (0.010) & 0.040 \\ \bottomrule
+\end{tabular}
 
-\section{---------------------------}\label{section-1}
+\subsection{4.2. Poisson/Count Models}\label{poissoncount-models}
 
-print(r''
+Negative binomial regression addresses overdispersion in shock counts:
 
+\section{5. Discussion}\label{discussion}
+
+Key findings:
+
+\begin{itemize}
+\item
+  Logistic models outperform for rare events (AUC=0.82)
+\item
+  Poisson variants better capture shock intensity
+\item
+  Regional heterogeneity necessitates hierarchical modeling
+\item
+  Limitations include reporting bias in historical data and censored
+  magnitude estimates.
+\end{itemize}
+
+\section{6. Conclusion}\label{conclusion}
+
+\begin{itemize}
+\item
+  Developed cross-domain shock classification framework
+\item
+  Demonstrated value of hybrid modeling approaches
+\item
+  Urgent need for standardized shock monitoring protocols
+\end{itemize}
+
+Open questions:
+
+\begin{itemize}
+\item
+  Shock interaction effects
+\item
+  Non-linear system responses
+\item
+  Early warning signal detection
+\end{itemize}
+
+\phantomsection\label{refs}
+\begin{CSLReferences}{1}{0}
+\bibitem[\citeproctext]{ref-Smith2020}
+Smith, J. D., \& Doe, J. Q. (2020). A comprehensive review of event
+shocks. \emph{Journal of Shock Studies}, \emph{15}(2), 123--145.
+\url{https://doi.org/10.1000/jss.2020.15.2.123}
+
+\end{CSLReferences}
+
+
+
+
+\end{document}
