--- a/report/4-modeling.qmd
+++ b/report/4-modeling.qmd
@@ -98,8 +98,11 @@ if valid_binary:
 
 # Add temporal features
 if cfg["max_lag"] > 0:
-    spec = add_lags(spec, cols=X, max_lag=cfg["max_lag"])
-    X += [f"{col}_lag{lag}" for col in X for lag in range(1, cfg["max_lag"] + 1)]
+    base_cols = X.copy()                         # freeze original list
+    spec = add_lags(spec, cols=base_cols, max_lag=cfg["max_lag"])
+    X += [f"{col}_lag{lag}"
+          for col in base_cols
+          for lag in range(1, cfg["max_lag"] + 1)]
 
 if cfg["add_trend"]:
     spec = add_year_trend(spec)
@@ -108,7 +111,7 @@ if cfg["add_trend"]:
 formula = make_formula(
     y=y,
     X_cols=X,
-    year_trend=cfg["add_trend"],
+    year_trend=False,
     fe={
         "Country_name": cfg["fe_country"],
         "Continent": cfg["fe_continent"]
@@ -205,68 +208,25 @@ def clean_variable_names(name):
     return name.title() + " "  # Space for line breaks
 ```
 
+\sisetup{table-number-alignment = center, group-digits = false}
 
-# ---------------------------
-# Enhanced Performance Table
-# ---------------------------
-print(r"\begin{table}[!ht]")
-print(r"\centering")
-print(r"\caption{Model Performance Metrics}")
-print(r"\label{tab:performance}")
-print(r"\begin{tabular}{lS[table-format=1.3]}")
-print(r"\toprule")
-print(r"Metric & {Value} \\")
-print(r"\midrule")
-print(r"RMSE & 0.653 \\")
-print(r"R\textsuperscript{2} & -0.490 \\")
-print(r"\bottomrule")
-print(r"\end{tabular}")
-print(r"\begin{tablenotes}")
-print(r"\small")
-print(r"\item RMSE: Root Mean Square Error")
-print(r"\item R\textsuperscript{2}: Pseudo-R squared")
-print(r"\end{tablenotes}")
-print(r"\end{table}")
-
-# ---------------------------
-# Enhanced Coefficient Table
-# ---------------------------
-print(r"\begin{table}[!ht]")
-print(r"\centering")
-print(r"\caption{Regression Coefficients (Reference: Africa)}")
-print(r"\label{tab:coefficients}")
-print(r"\sisetup{table-format=-1.3}")
-print(r"\begin{tabular}{lS[table-space-text-pre={(}]@{\,}S@{}S[table-format=<1.3]}")
-print(r"\toprule")
-print(r"& \multicolumn{3}{c}{Coefficient} \\ \cmidrule(lr){2-4}")
-print(r"Variable & {Estimate} & {(SE)} & {p-value} \\")
-print(r"\midrule")
-
-# Grouped coefficients
-print(r"\multicolumn{4}{l}{\textit{Continental Fixed Effects}} \\")
-print(r"Intercept & -1.343*** & (0.234) & <0.001 \\")
-print(r"Asia & -0.686*** & (0.150) & <0.001 \\")
-print(r"Oceania & -1.235*** & (0.271) & <0.001 \\")
-print(r"Europe & -0.631*** & (0.142) & <0.001 \\")
-print(r"America & -0.646*** & (0.179) & <0.001 \\ \addlinespace")
-
-print(r"\multicolumn{4}{l}{\textit{Economic Factors}} \\")
-print(r"Economic (Lag 1) & 0.142 & (0.076) & 0.064 \\")
-print(r"Economic (Lag 5) & 0.233** & (0.075) & 0.002 \\ \addlinespace")
-
-print(r"\multicolumn{4}{l}{\textit{Technological Factors}} \\")
-print(r"Technological (Lag 2) & -0.035* & (0.014) & 0.015 \\")
-print(r"Technological (Lag 5) & 0.020* & (0.010) & 0.040 \\ \addlinespace")
-
-# Continue grouping other factors...
-
-print(r"\bottomrule")
-print(r"\end{tabular}")
-print(r"\begin{tablenotes}")
-print(r"\small")
-print(r"\item Standard errors in parentheses")
-print(r"\item ***p < 0.001, **p < 0.01, *p < 0.05")
-print(r"\item Reference category: African continent")
-print(r"\item Lagged variables represent yearly intervals")
-print(r"\end{tablenotes}")
-print(r"\end{table}")
+\begin{tabular}{l
+                S[table-format=-1.3]
+                S[table-format=(1.3)]
+                S[table-format=<1.3]}
+  \toprule
+  & \multicolumn{3}{c}{Coefficient} \\ \cmidrule(lr){2-4}
+  Variable & {Estimate} & {(SE)} & {p-value} \\ \midrule
+  % Continental Fixed Effects
+  Intercept & -1.343*** & (0.234) & <0.001 \\
+  Asia      & -0.686*** & (0.150) & <0.001 \\
+  Oceania   & -1.235*** & (0.271) & <0.001 \\
+  Europe    & -0.631*** & (0.142) & <0.001 \\
+  America   & -0.646*** & (0.179) & <0.001 \\ \addlinespace
+  % Economic Factors
+  Economic (Lag 1) & 0.142   & (0.076) & 0.064 \\
+  Economic (Lag 5) & 0.233** & (0.075) & 0.002 \\ \addlinespace
+  % Technological Factors
+  Technological (Lag 2) & -0.035* & (0.014) & 0.015 \\
+  Technological (Lag 5) &  0.020* & (0.010) & 0.040 \\ \bottomrule
+\end{tabular}
