--- a/report/references.bib
+++ b/report/references.bib
@@ -1,18 +1,6 @@
-@article{Smith2020,
-  author  = {Smith, John D. and Doe, Jane Q.},
-  title   = {A Comprehensive Review of Event Shocks},
-  journal = {Journal of Shock Studies},
-  year    = {2020},
-  volume  = {15},
-  number  = {2},
-  pages   = {123--145},
-  doi     = {10.1000/jss.2020.15.2.123}
-}
-
-@book{Jones2018,
-  author    = {Jones, Alice},
-  title     = {Shock Dynamics in Crisis},
-  publisher = {Academic Press},
-  year      = {2018},
-  address   = {New York, NY}
+@article{delannoy2024dynamics,
+  title={Dynamics of the polycrisis: temporal trends, spatial distribution and interconnections of national shocks (1970-2019)},
+  author={Delannoy, Louis and Verzier, Alexandre and Bastien-Olvera, Bernardo A and Benra, Felipe and Nystr{\"o}m, Magnus and J{\o}rgensen, Peter S{\o}gaard},
+  year={2024},
+  publisher={EarthArXiv}
 }
